image bug fixed

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     </div>
     <div class="landing">
-        <img src="/images/main_pic.png" alt="">
+        <img src="./images/main_pic.png" alt="">
     </div>
     </section>
     <!-- <div class="image">
