--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section>
+    <section class="first-section">
     <div class="landing">
+        <nav id="nav-bar">
+            <!-- <span id="logo"><img src="./images/logo.png" alt=""></span> -->
+            <img src="logo.svg" alt="" style="width: 40%; float:left;">
+        </nav>
         <h1>Welcome to</h1>
         <h1><span class="name-highlight">Tanveer</span> Website</h1>
         <h3>Professional graphic designer and web developer</h3>
