--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
     <section class="first-section">
     <div class="landing">
         <nav id="nav-bar">
-            <!-- <span id="logo"><img src="./images/logo.png" alt=""></span> -->
-            <img src="logo.svg" alt="" style="width: 40%; float:left;">
+            <a href="#"><img src="logo.svg" alt="" style="width: 40%; float:left;"></a>
         </nav>
-        <h1>Welcome to</h1>
-        <h1><span class="name-highlight">Tanveer</span> Website</h1>
+        <h1>Hi! <br> I am <span class="name-highlight">Tanveer</span></h1>
         <h3>Professional graphic designer and web developer</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam excepturi ipsam tenetur labore quos obcaecati ullam, neque placeat amet? Quae accusantium earum omnis. Officiis, quia non! Vero optio, quisquam pariatur ut quaerat eum dolorem fugiat, quos voluptatum consequuntur numquam similique eaque sequi voluptate totam iusto nihil aliquam repellendus eos tempora.</p>
     
