--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         </nav>
         <h1>Hi! <br> I am <span class="name-highlight">Tanveer</span></h1>
         <h3>Professional graphic designer and web developer</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam excepturi ipsam tenetur labore quos obcaecati ullam, neque placeat amet? Quae accusantium earum omnis. Officiis, quia non! Vero optio, quisquam pariatur ut quaerat eum dolorem fugiat, quos voluptatum consequuntur numquam similique eaque sequi voluptate totam iusto nihil aliquam repellendus eos tempora.</p>
+        <p>Hello! I have been working as a graphic designer for 3 years. I am experienced with UI/UX and creating brand image. I am proficient in adobe illustrator, photoshop, indesign and figma. Besides that I have hobbies like writing poems, songs and debating. Right now I am working my way up to be a full-stack web developer.</p>
+        <a href="https://instagram.com/douknowtanveer" target="_blank"><button class="hire-button">Hire Me</button></a>
     
     </div>
     <div class="landing">
