--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
 </head>
 <body>
     <div class="top-navigator">
-        <a href="#">about</a>
-        <a href="#">Blog</a>
-        <a href="#">Portfolio</a>
-        <a href="#">Contact</a>
+        <a class="logo" href="#"><img class="logo" src="logo.svg" alt="" style="width: 15%; float:left;"></a>
+        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link" href="#">Blog</a>
+        <a class="nav-link" href="#">Portfolio</a>
+        <a class="nav-link" href="#">About</a>
     </div>
     <section class="first-section">
     <div class="landing">
-        <a href="#"><img src="logo.svg" alt="" style="width: 40%; float:left;"></a>
+        
         <h1>Hi! <br> I am <span class="name-highlight">Tanveer</span></h1>
         <h3>Professional graphic designer and web developer</h3>
         <p>Hello! I have been working as a graphic designer for 3 years. I am experienced with UI/UX and creating brand image. I am proficient in adobe illustrator, photoshop, indesign and figma. Besides that I have hobbies like writing poems, songs and debating. Right now I am working my way up to be a full-stack web developer.</p>
